Correct input label on login form

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
               <input type="text" class="form-control" id="signIn-inputUsername" placeholder="Enter Admin Username" ng-model="username">
             </div>
             <div class="form-group">
-              <label for="signIn-inputPassword">Username</label>
+              <label for="signIn-inputPassword">Password</label>
               <input type="password" class="form-control" id="signIn-inputPassword" placeholder="Enter Admin Password" ng-model="password">
             </div>
             <p>
